<resources>
    <string name="app_name">AutoAlarm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="hours_sleep_question">How long do you want to sleep?</string>
    <string name="time_before_meeting_question">Awakening time before first meeting?</string>
    <string name="first_event_tomorrow">First event tomorrow:</string>
    <string name="remove_alarm">Deactivate alarm</string>
    <string name="add_alarm">Activate alarm</string>
    <string name="make_up_alarm_at">Wake up alarm at:</string>
    <string name="bedtime_at">Bedtime at:</string>
    <string name="minutes">(minutes)</string>
    <string name="hours">(hours)</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="start">Start</string>
    <string name="bedtime">BEDTIME!</string>
    <string name="test_alarm">Test alarm</string>


    <string-array name="alarm_types">
        <item>Normal</item>
        <item>Barcode</item>
        <item>QR</item>
    </string-array>
</resources>
