<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#eee"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:labelFor="@+id/edittext_hours_sleep"
                android:text="@string/hours_sleep_question"/>

            <EditText
                android:id="@id/edittext_hours_sleep"
                android:layout_width="80dp"
                android:hint="@string/hours"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"

                android:gravity="center"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:textSize="10sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:background="#eee"
            android:gravity="center_vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:labelFor="@+id/edittext_time_before_meeting"
                android:text="@string/time_before_meeting_question"
                />
            <EditText
                android:id="@id/edittext_time_before_meeting"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:gravity="center"
                android:hint="@string/minutes"
                android:layout_alignParentRight="true"
                android:inputType="phone"
                android:textSize="10sp" />

        </RelativeLayout>



        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Automatically set the alarm for the next day"
            android:id="@+id/checkbox_auto"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#eee"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12:00"
                android:gravity="center"
                android:id="@+id/earliest_time"
                android:layout_weight="2"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Set earliest time for wakeup alarm"
                android:onClick="openEarliestWaketime"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#eee"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12:00"
                android:gravity="center"
                android:id="@+id/latest_time"
                android:layout_weight="2"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Set latest time for bedtime alarm"
                android:onClick="openLatestWaketime"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Type of wakeup alarm"
            android:id="@+id/textView" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Use specific code"
                android:layout_weight="1"
                android:id="@+id/checkbox_specific_code" />

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:onClick="saveSettings"/>
    </LinearLayout>
</ScrollView>
