<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Activate AutoAlarm"
            android:id="@+id/activate_automatic"
            android:layout_gravity="center_horizontal"
            android:checked="false" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:text="@string/first_event_tomorrow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <TextView
            android:text=""
            android:id="@+id/data"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:text="@string/bedtime_at"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <TextView
            android:text=""
            android:id="@+id/textview_bedtime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>
        <TextView
            android:text="@string/make_up_alarm_at"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <TextView
            android:text=""
            android:id="@+id/textview_awaketime"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#333"
            android:layout_marginBottom="15dp"
            android:layout_marginTop="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Custom alarm"
            android:id="@+id/textview_custom_alarm"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Custom alarm set at:"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/custom_alarm_time"
            android:layout_gravity="center_horizontal" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Set custom alarm"
            android:id="@+id/checkBox_custom_alarm"
            android:layout_gravity="center_horizontal"
            android:checked="false" />
    </LinearLayout>
</ScrollView>
